--- a/index.html
+++ b/index.html
@@ -1,33 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucky Cat Café - Home</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lucky Cat Café</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header class="navbar">
-        <div class="logo">lucky cat café</div>
-        <nav class="nav-links">
-            <a href="index.html">home</a>
-            <a href="#">about us</a>
-            <a href="#">book</a>
-            <a href="#">adopt</a>
-            <a href="#">get involved</a>
-        </nav>
+      <div class="logo">lucky cat café</div>
+      <nav class="nav-links">
+        <a href="index.html">home</a>
+        <a href="about.html">about us</a>
+        <a href="book.html">book</a>
+        <a href="adopt.html">adopt</a>
+        <a href="get-involved.html">get involved</a>
+      </nav>
     </header>
-    
+
     <section class="hero">
-        <div class="hero-content">
-            <h1>Paws in for a Lucky Treat!</h1>
-            <button class="book-button">book visit</button>
-        </div>
+      <div class="hero-content">
+        <h1>Paws in for a Lucky Treat!</h1>
+        <button class="book-button">book visit</button>
+      </div>
     </section>
-    
+
     <section class="description">
-        <h2>THE CAT CAFÉ FROM OTTAWA</h2>
-        <p>Escape the city’s bustle and step into a cozy haven where friendly felines and freshly brewed coffee come together in perfect harmony. At Lucky Cat Café, our adoptable cats roam freely, offering gentle purrs as you savor a latte or sweet pastry. It’s an inviting space designed for both humans and whiskered companions to share warmth, comfort, and perhaps the promise of a forever home.</p>
+      <h2>THE CAT CAFÉ FROM OTTAWA</h2>
+      <p>
+        Escape the city’s bustle and step into a cozy haven where friendly felines and freshly
+        brewed coffee come together in perfect harmony. At Lucky Cat Café, our adoptable cats roam
+        freely, offering gentle purrs as you savor a latte or sweet pastry. It’s an inviting space
+        designed for both humans and whiskered companions to share warmth, comfort, and perhaps the
+        promise of a forever home.
+      </p>
     </section>
-</body>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-left">
+          <div class="footer-section">
+            <h3>address</h3>
+            <p>Lucky Cat Café<br />123 Purr Street<br />Ottawa, ON K1A 0B1</p>
+          </div>
+          <div class="footer-section">
+            <h3>contact</h3>
+            <p>meow@luckycatcafe.ca<br />(613) 123-4567</p>
+          </div>
+          <div class="footer-section">
+            <h3>hours</h3>
+            <p>Mon-Fri 8AM - 7PM<br />Sat-Sun 9AM - 5PM</p>
+          </div>
+        </div>
+        <div class="footer-socials">
+          <a href="#"><img src="assets/icons/ig.svg" alt="Instagram" /></a>
+          <a href="#"><img src="assets/icons/fb.svg" alt="Facebook" /></a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
