--- a/location.html
+++ b/location.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Location</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -19,22 +19,26 @@
       </nav>
     </header>
 
-    <section class="hero">
-      <div class="hero-content">
-        <h1>Paws in for a Lucky Treat!</h1>
-        <a href="book.html" class="book-button">book visit</a>
-      </div>
-    </section>
+    <section class="location">
+      <div class="location-container">
+        <div class="location-address">
+          <h1>address</h1>
+          <p>Lucky Cat Café<br />123 Purr Street<br />Ottawa, ON K1A 0B1</p>
+        </div>
 
-    <section class="description">
-      <h2>THE CAT CAFÉ FROM OTTAWA</h2>
-      <p>
-        Escape the city’s bustle and step into a cozy haven where friendly felines and freshly
-        brewed coffee come together in perfect harmony. At Lucky Cat Café, our adoptable cats roam
-        freely, offering gentle purrs as you savor a latte or sweet pastry. It’s an inviting space
-        designed for both humans and whiskered companions to share warmth, comfort, and perhaps the
-        promise of a forever home.
-      </p>
+        <div class="location-map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.5090433!2d153.029086!3d-27.518131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a66dbfc6537%3A0x9fc32a072e187892!2sLucky%20Cat%20Cafe%20Ipswich!5e0!3m2!1sen!2sau!4v1616161616161!5m2!1sen!2sau"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          >
+          </iframe>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
