--- a/volunteer.html
+++ b/volunteer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us</title>
+    <title>Volunteer With Us</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -19,32 +19,33 @@
       </nav>
     </header>
 
-    <section class="about">
-      <h1>about us</h1>
-      <div class="about-container">
-        <img src="assets/images/about.png" />
-        <div class="about-text">
+    <section class="volunteer">
+      <h1>volunteer with us</h1>
+      <div class="volunteer-container">
+        <img src="assets/images/volunteer.png" />
+
+        <div class="volunteer-text">
           <p>
-            Lucky Cat Café opened its doors in Ottawa in 2022, born from a simple dream: to create a
-            warm, welcoming space where coffee enthusiasts and cat lovers could come together.
-            Inspired by the cat café phenomenon abroad, our founders wanted to offer something more
-            than your average café—an opportunity for our feline residents to find their forever
-            homes.
+            Volunteering at Lucky Cat Café is a wonderful way to combine your love of cats with
+            community service. We’re looking for enthusiastic individuals who are at least 18 years
+            old, reliable, and able to commit to a regular weekly shift.
           </p>
           <p>
-            From the start, we partnered with local shelters to give adoptable cats a comfortable,
-            cage-free environment where they can socialize and flourish. Visitors can enjoy freshly
-            brewed coffee, decadent pastries, and most importantly, quality time with our charming
-            whiskered companions. Whether it’s a peaceful afternoon cuddling with a sleepy tabby or
-            an energetic play session with a curious kitten, every visit helps these cats build
-            confidence and steal hearts.
+            Responsibilities include feeding and cleaning, socializing with our feline residents,
+            assisting visitors with basic cat-care guidance, and helping maintain a cozy, welcoming
+            atmosphere for everyone.
           </p>
           <p>
-            Stop by, grab a latte, and settle in for some purr therapy. At Lucky Cat Café, you’ll
-            find a place to relax, connect, and maybe even discover a new best friend. It’s our way
-            of spreading warmth throughout the Ottawa community—one cup and one cuddle at a time.
+            To apply, please email your resume to <strong>meow@luckycatcafe.ca</strong>, along with
+            a short note about why you’d be a great fit for our team. Once we review your
+            application, we’ll reach out to schedule an orientation session, during which you’ll
+            learn about our café procedures, meet our whiskered residents, and discover how your
+            time and care can help these cats find their forever homes.
           </p>
-          <a class="book-button" href="location.html">visit us!</a>
+          <p>
+            Join us, and become part of a supportive environment dedicated to sharing purrs,
+            improving feline lives, and brightening the Ottawa community—one cuddle at a time.
+          </p>
         </div>
       </div>
     </section>
