add adoption form page

--- a/adopt.html
+++ b/adopt.html
@@ -34,7 +34,7 @@
               hand. Offer him a cozy blanket to knead, and he’ll reward you with a soothing, steady
               purr that’s perfect for quiet evenings in.
             </p>
-            <button class="adopt-button">adopt</button>
+            <a href="form.html" class="adopt-button">adopt</a>
           </div>
         </div>
 
@@ -50,7 +50,7 @@
               action. Luna also has a softer side: if you sit still long enough, she’ll come
               investigate and might curl up beside you.
             </p>
-            <button class="adopt-button">adopt</button>
+            <a href="form.html" class="adopt-button">adopt</a>
           </div>
         </div>
 
@@ -66,7 +66,7 @@
               adventure, Mochi loves gentle cuddles at the end of the day and will melt into purrs
               the moment you scratch her chin.
             </p>
-            <button class="adopt-button">adopt</button>
+            <a href="form.html" class="adopt-button">adopt</a>
           </div>
         </div>
       </div>
