--- a/form.html
+++ b/form.html
@@ -121,7 +121,7 @@
 
   <script>
     document.getElementById('adoptionForm').addEventListener('submit', function(e) {
-      e.preventDefault();
+      e.preventDefault(); // stops page reload
       alert('Thank you! Your adoption application has been submitted.');
     });
   </script>
